feat: ubdate unit 4 to 5, add repository test